[package]
name = "husk"
description = "Rust itch.io utilities"
version = "2.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
com = "0.2.0"
widestring = "0.4.0"
once_cell = "1.4.0"
log = "0.4.8"
thiserror = "1.0.20"

[dev-dependencies]
pretty_env_logger = "0.4.0"
